--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "peerDependencies": {},
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
+    "dotenv": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "jquery": "^3.2.1",
     "node-sass": "^4.6.1",
