--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   "private": false,
   "peerDependencies": {},
   "dependencies": {
-    "bootstrap": "4.0.0-beta.2",
-    "dotenv": "^4.0.0",
-    "gulp-babel": "^7.0.0",
     "jquery": "^3.2.1",
-    "node-sass": "^4.6.1",
     "popper.js": "^1.12.7",
     "skylinkjs": "^0.6.26"
   },
   "devDependencies": {
+    "gulp-babel": "^7.0.0",
+    "node-sass": "^4.6.1",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
@@ -25,6 +23,7 @@
     "gulp-crass": "^0.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "rollup-plugin-babel": "^3.0.2"
+    "rollup-plugin-babel": "^3.0.2",
+    "dotenv": "^4.0.0"
   }
 }
