--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "express-babelify-middleware": "^0.2.1",
     "hbs": "~4.0.1",
+    "knex": "^0.14.2",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "node-sass-middleware": "0.9.8",
