--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.6.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "countries-list": "^2.3.0",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
