--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "uglify-es": "^3.3.8"
   }
 }
