--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.15.5",
     "express-babelify-middleware": "^0.2.1",
     "express-fileupload": "^0.3.0",
+    "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "image-size": "^0.6.2",
