--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "knex migrate:latest"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "babel-preset-env": "^1.6.1",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
@@ -26,8 +27,10 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "node-sass-middleware": "0.9.8",
+    "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "secure-random": "^1.1.1",
     "serve-favicon": "~2.4.5",
     "uglify-es": "^3.3.8",
     "uuid": "^3.2.1"
