--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-env": "^1.6.1",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "countries-list": "^2.3.0",
     "debug": "~2.6.9",
